--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@ SET_DHTML("Teil1", "Teil2", "Teil3", "Teil4", "Teil5", "Teil6", "Teil7", "Teil8"
 </head>
 <body>
 <img name="Teil1" src="1.png" width="240" height="135">
+<img name="Teil2" src="2.png" width="240" height="135">
+<img name="Teil3" src="3.png" width="240" height="135">
+<img name="Teil4" src="4.png" width="240" height="135">
+<img name="Teil5" src="5.png" width="240" height="135">
+<img name="Teil6" src="6.png" width="240" height="135">
+<img name="Teil7" src="7.png" width="240" height="135">
+<img name="Teil8" src="8.png" width="240" height="135">
+<img name="Teil9" src="9.png" width="240" height="135">
 </body>
 </html>
