--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ SET_DHTML("Teil1", "Teil2", "Teil3", "Teil4", "Teil5", "Teil6", "Teil7", "Teil8"
 //-->
 </script>
 </head>
-<body>
+<body bgcolor="#ffffff">
+<script type="text/javascript" src="http://www.walterzorn.de/en/scripts/wz_dragdrop.js"></script>
 <img name="Teil1" src="1.png" width="240" height="135">
 <img name="Teil2" src="2.png" width="240" height="135">
 <img name="Teil3" src="3.png" width="240" height="135">
