--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+<META HTTP-EQUIV="imagetoolbar" CONTENT="no">
+<title>Puzzle</title>
 <script type="text/javascript" src="wz_dragdrop.js"></script>
 <script type="text/javascript">
-<!--
-SET_DHTML("Teil1", "Teil2", "Teil3", "Teil4", "Teil5", "Teil6", "Teil7", "Teil8", "Teil9");
-//-->
+       <!--
+       SET_DHTML("Teil1", "Teil2", "Teil3", "Teil4", "Teil5", "Teil6", "Teil7", "Teil8", "Teil9");
+       //-->
 </script>
 </head>
 <body bgcolor="#ffffff">
