--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body bgcolor="#ffffff">
 <script type="text/javascript" src="wz_dragdrop.js"></script>
 <img src="transparentpixel.gif" alt="JavaScript Drag and Drop und DHTML-Bibliothek" width="1" height="60">
-<img name="Teil1" src="1.png" width="240">
-<img name="Teil2" src="2.png" width="240">
-<img name="Teil3" src="3.png" width="240">
-<img name="Teil4" src="4.png" width="240">
-<img name="Teil5" src="5.png" width="240">
-<img name="Teil6" src="6.png" width="240">
-<img name="Teil7" src="7.png" width="240">
-<img name="Teil8" src="8.png" width="240">
-<img name="Teil9" src="9.png" width="240">
+<img name="Teil1" src="1.png" width="240" alt="Teil1">
+<img name="Teil2" src="2.png" width="240" alt="Teil2">
+<img name="Teil3" src="3.png" width="240" alt="Teil3">
+<img name="Teil4" src="4.png" width="240" alt="Teil4">
+<img name="Teil5" src="5.png" width="240" alt="Teil5">
+<img name="Teil6" src="6.png" width="240" alt="Teil6">
+<img name="Teil7" src="7.png" width="240" alt="Teil7">
+<img name="Teil8" src="8.png" width="240" alt="Teil8">
+<img name="Teil9" src="9.png" width="240" alt="Teil9">
 </body>
 </html>
