--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
        SET_DHTML("Teil1", "Teil2", "Teil3", "Teil4", "Teil5", "Teil6", "Teil7", "Teil8", "Teil9");
        //-->
        </script>
+<script type="text/javascript">
+<!--
+if (!document.layers)
+{
+    document.write('<style type="text/css">#reldiv {position:relative;background-color:#ffffff;border:1px solid #000099;overflow:hidden;}'+
+                   '#reldiv2 {position:relative;background-color:#ffffff;border:1px solid #000099;overflow:hidden;}<\/style>');
+}
+//-->
+</script>
 </head>
 <body bgcolor="#ffffff">
 <script type="text/javascript" src="wz_dragdrop.js"></script>
