--- a/index.html
+++ b/index.html
@@ -1,38 +1,10 @@
 <!--DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"-->
-<!--DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN"
-       "http://www.w3.org/TR/html4/strict.dtd"-->
+<!--DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN" "http://www.w3.org/TR/html4/strict.dtd"-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>Puzzle</title>
-<script type="text/javascript" src="wz_dragdrop.js"></script>
-<script type="text/javascript">
-       <!--
-       SET_DHTML("Teil1", "Teil2", "Teil3", "Teil4", "Teil5", "Teil6", "Teil7", "Teil8", "Teil9");
-       //-->
-       </script>
-<script type="text/javascript">
-<!--
-if (!document.layers)
-{
-    document.write('<style type="text/css">#reldiv {position:relative;background-color:#ffffff;border:1px solid #000099;overflow:hidden;}'+
-                   '#reldiv2 {position:relative;background-color:#ffffff;border:1px solid #000099;overflow:hidden;}<\/style>');
-}
-//-->
-</script>
 </head>
-<body bgcolor="#ffffff">
-<script type="text/javascript" src="wz_dragdrop.js"></script>
-<img src="transparentpixel.gif" alt="JavaScript Drag and Drop und DHTML-Bibliothek" width="1" height="60">
-<img name="Teil1" src="1.png" width="350" alt="Teil1">
-<img name="Teil2" src="2.png" width="350" alt="Teil2">
-<img name="Teil3" src="3.png" width="350" alt="Teil3">
-<img name="Teil4" src="4.png" width="350" alt="Teil4">
-<img name="Teil5" src="5.png" width="350" alt="Teil5">
-<img name="Teil6" src="6.png" width="350" alt="Teil6">
-<img name="Teil7" src="7.png" width="350" alt="Teil7">
-<img name="Teil8" src="8.png" width="350" alt="Teil8">
-<img name="Teil9" src="9.png" width="350" alt="Teil9">
+<body>
 </body>
 </html>
