--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <html>
 <head>
 <title>Puzzle</title>
-#mydiv {
+<style type="text/css">
+<!--
+  #mydiv {
   position: absolute;
   }
+</style>
 <script>  
  // Make the DIV element draggable:
 dragElement(document.getElementById("mydiv"));
