--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ function dragElement(elmnt) {
 </script>
 </head>
 <body>
-<div id="mydiv">
+<!-- Draggable element -->
+  <div id="mydiv">
   <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
   <div id="mydivheader">Click here to move</div>
   <p>Move</p>
