--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@ function dragElement(elmnt) {
 <body>
 <!-- Draggable element -->
   <div id="mydiv">
-  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-  <div id="mydivheader">Click here to move</div>
-  <p>Move</p>
-  <p>this</p>
-  <p>DIV</p>
-</div>
+   <img src="1.png" alt="Teil1"> 
+  </div>
 </body>
 </html>
