--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html>
 <style type="text/css">
 <!--
-  #mydiv {
-  position: absolute;
-  z-index: 9;
-  background-color: #f1f1f1;
-  border: 1px solid #d3d3d3;
-  text-align: center;
-}
-
-#mydivheader {
-  padding: 10px;
-  cursor: move;
-  z-index: 10;
-  background-color: #2196F3;
-  color: #fff;
-}
+  #mydiv {position: absolute;}
 -->
 </style>
   <head>
