--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function dragElement(elmnt) {
 <body>
 <!-- Draggable element -->
   <div id="mydiv">
-   <img src="1.png" alt="Teil1"> 
+   <img src="1.png" width="350" alt="Teil1"> 
   </div>
 </body>
 </html>
