--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
 <!-- Draggable element -->
-  <div id="mydiv">
+  <div id="mydiv1">
    <img src="1.png" width="350" alt="Teil1"> 
   </div>
+ <div id="mydiv2">
+   <img src="2.png" width="350" alt="Teil2"> 
+  </div>
 <script>
-dragElement(document.getElementById(("mydiv")));
+dragElement(document.getElementById(("mydiv1")));
+dragElement(document.getElementById(("mydiv2")));
 
 function dragElement(elmnt) {
   var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
