--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <style type="text/css">
 <!--
-  #mydiv {position: absolute;}
+  #mydiv1 {position: absolute;}
+  #mydiv1 {position: absolute;}
+
 -->
 </style>
   <head>
@@ -13,8 +15,13 @@
   <div id="mydiv1">
    <img src="1.png" width="350" alt="Teil1"> 
   </div>
+  <div id="mydiv2">
+   <img src="2.png" width="350" alt="Teil1"> 
+  </div>
 <script>
 dragElement(document.getElementById(("mydiv1")));
+dragElement(document.getElementById(("mydiv2")));
+
 function dragElement(elmnt) {
   var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
   if (document.getElementById(elmnt.id + "header")) {
