--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   #mydiv7 {position: absolute;}
   #mydiv8 {position: absolute;}
   #mydiv9 {position: absolute;}
-
-
 -->
 </style>
   <head>
 <title>Puzzle</title>
 </head>
 <body>
+ <img src="Buchstabengitter quer.png" width="1000" alt="Hintergrund">
 <!-- Draggable element -->
   <div id="mydiv1">
    <img src="1.png" width="350" alt="Teil1"> 
